# serializer version: 1
# name: test_inspect
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": [
              {
                "name": "example-a-961b4c22",
                "versions": [
                  {
                    "requires_python": ">=3.8",
                    "requires": [
                      "example-b-961b4c22>1.0.0"
                    ],
                    "extras": [],
                    "sdist": true,
                    "wheel": true,
                    "yanked": false,
                    "wheel_tags": [],
                    "description": "",
                    "version": "1.0.0"
                  }
                ]
              },
              {
                "name": "example-b-961b4c22",
                "versions": [
                  {
                    "requires_python": ">=3.8",
                    "requires": [],
                    "extras": [],
                    "sdist": true,
                    "wheel": true,
                    "yanked": false,
                    "wheel_tags": [],
                    "description": "",
                    "version": "1.0.0"
                  },
                  {
                    "requires_python": ">=3.8",
                    "requires": [],
                    "extras": [],
                    "sdist": true,
                    "wheel": true,
                    "yanked": false,
                    "wheel_tags": [],
                    "description": "",
                    "version": "2.0.0"
                  },
                  {
                    "requires_python": ">=3.8",
                    "requires": [
                      "example-c-961b4c22"
                    ],
                    "extras": [],
                    "sdist": true,
                    "wheel": true,
                    "yanked": false,
                    "wheel_tags": [],
                    "description": "",
                    "version": "3.0.0"
                  }
                ]
              }
            ],
            "root": {
              "requires_python": ">=3.8",
              "requires": [
                {
                  "requirement": "example-a-961b4c22",
                  "name": "example-a-961b4c22",
                  "module_name": "example_a_961b4c22"
                }
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": [
                {
                  "name": "example-a-961b4c22",
                  "version": "1.0.0",
                  "module_name": "example_a_961b4c22"
                },
                {
                  "name": "example-b-961b4c22",
                  "version": "2.0.0",
                  "module_name": "example_b_961b4c22"
                }
              ],
              "explanation": "The latest valid version of `b` should be installed. `b==3.0.0` is not valid because it requires `c` which does not exist."
            },
            "environment": {
              "python": "3.8",
              "additional_python": []
            },
            "resolver_options": {
              "python": null,
              "prereleases": false,
              "no_build": [],
              "no_binary": []
            },
            "template": "package",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`.",
            "source": "[PWD]/scenarios/example.json",
            "version": "961b4c22",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.8",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires b>1.0.0",
              "\u2502           \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502           \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2514\u2500\u2500 b-3.0.0",
              "        \u2514\u2500\u2500 requires c",
              "            \u2514\u2500\u2500 unsatisfied: no versions for package"
            ],
            "module_name": "example"
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_inspect_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      Skipping file: File at '[PWD]/test.json' is not a valid scenario: Input data was truncated
      {
        "scenarios": [
          {
            "name": "example",
            "packages": [
              {
                "name": "example-a-961b4c22",
                "versions": [
                  {
                    "requires_python": ">=3.8",
                    "requires": [
                      "example-b-961b4c22>1.0.0"
                    ],
                    "extras": [],
                    "sdist": true,
                    "wheel": true,
                    "yanked": false,
                    "wheel_tags": [],
                    "description": "",
                    "version": "1.0.0"
                  }
                ]
              },
              {
                "name": "example-b-961b4c22",
                "versions": [
                  {
                    "requires_python": ">=3.8",
                    "requires": [],
                    "extras": [],
                    "sdist": true,
                    "wheel": true,
                    "yanked": false,
                    "wheel_tags": [],
                    "description": "",
                    "version": "1.0.0"
                  },
                  {
                    "requires_python": ">=3.8",
                    "requires": [],
                    "extras": [],
                    "sdist": true,
                    "wheel": true,
                    "yanked": false,
                    "wheel_tags": [],
                    "description": "",
                    "version": "2.0.0"
                  },
                  {
                    "requires_python": ">=3.8",
                    "requires": [
                      "example-c-961b4c22"
                    ],
                    "extras": [],
                    "sdist": true,
                    "wheel": true,
                    "yanked": false,
                    "wheel_tags": [],
                    "description": "",
                    "version": "3.0.0"
                  }
                ]
              }
            ],
            "root": {
              "requires_python": ">=3.8",
              "requires": [
                {
                  "requirement": "example-a-961b4c22",
                  "name": "example-a-961b4c22",
                  "module_name": "example_a_961b4c22"
                }
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": [
                {
                  "name": "example-a-961b4c22",
                  "version": "1.0.0",
                  "module_name": "example_a_961b4c22"
                },
                {
                  "name": "example-b-961b4c22",
                  "version": "2.0.0",
                  "module_name": "example_b_961b4c22"
                }
              ],
              "explanation": "The latest valid version of `b` should be installed. `b==3.0.0` is not valid because it requires `c` which does not exist."
            },
            "environment": {
              "python": "3.8",
              "additional_python": []
            },
            "resolver_options": {
              "python": null,
              "prereleases": false,
              "no_build": [],
              "no_binary": []
            },
            "template": "package",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`.",
            "source": "[PROJECT_ROOT]/scenarios/example.json",
            "version": "961b4c22",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.8",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires b>1.0.0",
              "\u2502           \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502           \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2514\u2500\u2500 b-3.0.0",
              "        \u2514\u2500\u2500 requires c",
              "            \u2514\u2500\u2500 unsatisfied: no versions for package"
            ],
            "module_name": "example"
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '<not included>',
  })
# ---
# name: test_inspect_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_inspect_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
